<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="28dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:textSize="28sp"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RoundedEditText"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RoundedEditText"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="24dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="16dp"
        android:text="@string/login" />
</LinearLayout>